detail id tags, clean repo

--- a/_includes/timeline/birthOfWorlds.html
+++ b/_includes/timeline/birthOfWorlds.html
@@ -1,6 +1,6 @@
-<div class="columnSet" id="birthOfWorlds">
+<div class="columnSet">
   <article class="spanAll" style="background-color: rgba(30, 40, 60, 0.8)">
-    <details>
+    <details id="birthOfWorlds">
       <summary><h2>The Birth of Worlds</h2></summary>
       <p>As this timeline closes, the slope of the curve is only getting steeper. With skyhooks tossing great ships back and forth and robots swarming outwards, bent on building vast and magical things all across the solar system, humanity's sense of identity has not simply been shifted. It's been challenged.
       </p>
