--- a/_includes/timeline/ph2-RP-begins.html
+++ b/_includes/timeline/ph2-RP-begins.html
@@ -1,7 +1,7 @@
 
 
- <article class="column" id="ResidenceProgramBegins">
-   <details>
+ <article class="column">
+   <details id="ResidenceProgramBegins">
   <summary><h5>The Residence Program Begins</h5></summary>
     <p>This program allows any country to send citizens to the Moon for the rest of their lives, for the price of $150 million per astronaut when the program begins. There are 7 rounds to the program, and in each round the price for a permanent spot in the colonies drops by half, and the number of available spots doubles. All those sent must meet stiff criteria set by the ISA:</p>
    <ul>
@@ -13,22 +13,22 @@
     <li>They must be in excellent health</li>
     </ul>
   </details>
-  <details>
+  <details id="internatPop">
    <summary><h5>Broad International Population</h5></summary>
    <p>Nations may send a number of representatives, but at the same time, there is a deliberate effort to send a group that truly represents all the races, religions, language groups, regions, and ways of life of humanity.</p>
    <p>The crew of First Hab is expanded to 50 when the RP starts. They are the senior staff, who come from the ISA nations. As the Residence Program is the main initial revenue stream, it is made of people from other nations. There is overlap due to, for instance, the many nations of the European Union wishing to have nationals in the settlement, as only a few would have nationals in First Hab. Other space-faring nations may also forego recuperation of their investment in order to have a few more citizens on the Moon. Still, the bulk of the people in RP Round 1 come from places other than the founder nations.</p>
  </details>
- <details>
+ <details id="affordEntry">
    <summary><h5>Affordable Entry</h5></summary>
    <p>Payment for each spot may be made over 5 years. Today, there are 63 countries in the world with annual national budgets over US$30 billion. Examples of countries at that US$30 billion level include Slovakia, Vietnam, Bangladesh, Morocco, and Luxembourg. By the time the program began there would be a number of others. Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for 1% of one year's national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</p>
 </details>
-<details>
+<details id="firstRound">
   <summary><h5>First Round</h5></summary>
     <p>The First Round of RP astronauts take up residence in Long Hab once it is finished. They are a very broad cross-section of the human populace. All speak English as a first or second language, almost all speak at least 2 languages. Before going to the Moon, they trained together extensively. This is standard procedure so they learn how systems operate on the Moon and the details of working in that environment, and become a cohesive group able to trust each other and work together closely.</p>
     <p>All residents spend their days mostly in First Hab, running experiments and analyses in labs, building and testing prototypes in workshops, planning missions and the future of the colonies, or operating machinery doing mining, construction, fabrication, or farming. Sometimes they work in the greenhouse or go on sorties. Sometimes they do broadcasts for the people back on Earth.</p>
     <p>The First Rounders arrive over the course of a year in 10 separate groups of 20</p>
   </details>
-  <details>
+  <details id="firstHomes">
     <summary><h5>Building the First Homes</h5></summary>
       <p>In what will become a core tradition on the Moon, when the First Rounders arrive, the first task they have is to build their own homes. Kitchens, bathrooms, shower facilities, and laundry facilities are shared. Their homes are small affairs that only have to be structurally sound, provide privacy, include a few electrical and comms connections, be no more than a certain height, and take up no more than a certain amount of floor space.</p>
       <p>Other than that they have broad freedom to make their homes however they like. Each group of 20 is assigned to their own shared-facility area. Therefore each group clusters their homes around those facilities, but there is no requirement for them to be within a certain area. They scatter them around nearby in whatever way they decide is pleasing.</p>
