--- a/_includes/timeline/ph2-longHab.html
+++ b/_includes/timeline/ph2-longHab.html
@@ -4,7 +4,7 @@
  <p>Long Hab is a long, deep habitat with a vaulted roof. Like all habs in this mission architecture, it has plenty of natural light and big outdoor views. Its views are achieved with mirrors and lenses, so that radiation is kept low and the structural challenges of large windows are avoided. </p>
  <p>Enough equipment, crew, and knowledge have built up for Long Hab to be a big step up from First Hab. It is 200 m long, 30 m wide, with variable depth of 30 to 50 m from the floor to where the walls meet the roof, and the vaulted ceiling is 15 m high. </p>
  <p>Tele-operation of the robots building Long Hab is done by the crew of First Hab with support by the crew of Crossroads. Little tele-operation is done from Earth for construction. It is also uncommon for astronauts to work outside on construction, instead they do most things remotely through the robots. When they go out, they put pressurized cabs on the rovers and wear only flight suits, not proper space suits. Space suits are very restrictive, uncomfortable, and clumsy, they are used only when necessary (and occasionally just to go for a walk outside).</p>
- <details >
+ <details id="longHabConst">
    <summary>Construction Process</summary>
    <ul>
  <li>In-situ construction materials and techniques have developed enough that nothing structural is brought from Earth for Long Hab, and even some systems installations are made of local materials.</li>
@@ -18,12 +18,12 @@
  </ul>
 
  </details>
- <details>
+ <details id="longHabArch">
    <summary>Hab Architecture</summary>
    <p>The astronauts don't get to spend much time outside, and they are never truly outside. When on the open surface they are surrounded by beautiful desolation that can't fill in for the outdoors on Earth. Their indoors has to be their outdoors too. This is one reason why it is so important to make the habs as huge as possible from the outset. It is a matter of emotional health, and that becomes more important with each passing month of a person's stay.</p>
    <p>The habs are also all huge because many things about regulating an environment in space become easier with size: thermal regulation, air recycling, air quality, noise control, and everything having to do with creating and balancing an ecosystem, from mold not growing on every surface where it has the slightest chance, to there simply being enough space for a complex set of organisms to coexist in something resembling harmony.</p>
    <p>Thanks to the materials the habs are built from, and the way they are melded together, surfaces are never quite straight or flat and corners are soft. Once the molten regolith parged over the walls and ceilings has cooled into a single glassy surface, it will naturally have variations in tone and texture, and many simple things can help that along to accentuate the richness of the final patina. Not only is the building technique the best way to make use of the local materials, it is the best way to create a space that feels like you are in nature, though you aren't. This will be important to the residents.</p>
-   <details>
+   <details id="funcFeatures">
      <summary>Functional Features</summary>
      <ul>
        <li><b>Light tubes terminating in lenses</b> - similar to the light tubes shown on the initial model of First Hab, these tubes funnel in a large amount of sun, and can do so most of the time at Inukshuk's location. In this version, the lens at the mouth inside the hab disperses the sun over a wide enough area for it to have the intensity of sun near sunset, with the spectrum of sun at noon. </li>
@@ -34,14 +34,14 @@
        <li><b>The Larder, the Fridge, and the Freezer</b> - Branching off from this tunnel are three pits with silos inside them. The silos contain a normal atmosphere and are entered through insulated doors. Sunlight never reaches the inside of these pits. They were dug such that once the silos were set down inside them, about a meter of space remained between the sides of the pit and their walls, and they sit on stilts. On top of their domes are radiator units. It's very easy to keep these silos cold. One is kept cool, for long-term storage of things like potatoes, onions, and apples. One is cold, for storage of perishables like cheese and fruit. One is below freezing, for meat and fish, and for freezing the ice packs for the coolers widely used elsewhere in the habs. There are often reasons to store other things at one of these temperatures, the silos store a mish-mash of items. Each silo is 8 m across and 12 m tall. At first they are mostly empty, they are sized in consideration of future growth, especially for the Greenhouses coming online. </li>
     </ul>
   </details>
-  <details>
+  <details id="layoutFeat">
     <summary>Layout Features</summary>
        <li><b>Gardens</b> - Each sky section is filled with as much vegetation as possible. About half is grown hydroponically, the other half is grown in soil, as that soil slowly accumulates. The work done at the EESS on beneficiating regolith into fertile soil has had success. The EESS sends back a couple of tons of the stuff and the recipe for making it. In place of organic matter to fluff it so it's properly aerated, they mix in perlite made on-site by foaming molten rock with compressed air. This soil is placed in several long, narrow beds, where the crew plant a variety of test plants, including a few bushes. In time, all the designated beds and planters are filled with soil, which is then slowly made deeper. As it is the soil that is the key to creating a true ecosystem, and those gardens that give the feeling of the presence of nature, the large ones at the bottom of the sky sections are planted with the widest possible range of plants. Each one has two or three small fruit trees, a number of bushes, vines climbing the walls, vegetable beds, flower and grass beds, and cacti.</li>
        <li><b>Pond</b> - The pool water (see Health, below) is pumped to a pond in one of the sky sections, that is planted with a range of aquatic plants. It is important for ecosystem creation to figure out how to purify water with natural processes. It takes a while before the crew manages to get the pond environment going. For a long time the pool water is mostly purified with filters and ultraviolet light disinfection systems. Slowly the pond becomes healthy and takes over the job. </li>
        <li><b>Lunar parkour</b> - The exertion of normal activities on Earth is absent on the Moon, if they are done in the same way. Designing the hab interior to take account of this allows residents to move in a way that is more efficient, more engaging, and healthier. Instead of stairs, tubes are used to move between floors, where you grab the sides and haul yourself up. With practise, residents learn to do this so fast it is a sort of vertical running. People often jump between floors as well. It becomes a passtime to find new and exciting ways to move around the habs by bouncing off walls, swinging from things, and jumping great distances. Things are placed to create opportunities for this. Each level of the hab is also high, 4 to 5 m, to give people headroom even though a normal moon walk has a pretty high bounce in it.</li>
      </ul>
      </details>
-     <details>
+     <details id="healthFacil">
        <summary>Health Facilities</summary>
        <ul>
        <li><b>Swimming Pool</b> - With the ice mines producing lots of water, this is a full olympic sized pool with a deep end deep enough for high-diving. Swimming is an important conditioning exercise for residents - it loads their muscles in a way that is hard to achieve outside the water, making them work as hard as they have to on Earth to do the same thing, a consistent load that can be gentle or quite demanding. It is a central part of their cardio and muscle-building routines.</li>
@@ -51,7 +51,7 @@
   </details>
  </details>
  </details>
- <details>
+ <details id="infraUpgrades">
    <summary><h5>Infrastructure Upgrades<h5></summary>
      <ul>
      <li>The solar panel masts are expanded to provide more power, more of the time. They are made taller and wider, and the panels are moved up the mast, so they are all on the top half.</li>
@@ -60,7 +60,7 @@
      <li>There are also similar hangars that hold a very thin atmosphere of about 5% Earth's atmosphere. These are for processes that need to shed a lot of heat. Basalt fiber production is the best example. Even a very thin atmosphere can transmit heat as well as a full atmosphere, the trick is to circulate it so that the heat picked up is quickly transferred to a heat sink, and from there can be radiated away. The stone slab floor has pipes that circulate heat to radiators in a trench just outside the hangar, along one side of it.</li>
      <li>In both these cases, these structures are much like hangars on Earth in that they have large spans uninterrupted by any columns or other internal divisions, very large doors, and are covered by an arched roof.</li>
 </details>
-<details>
+<details id="firstGreenhouse">
  <summary><h5>First Greenhouse</h5></summary>
  <p>The greenhouse is divided into two halves, making it more like two connected greenhouses. When it is night in one half, it is day in the other. This way, the colony's access to constant sun can be used to double output. To do this, the outlet of the light tube that delivers sun to the interior of the greenhouse pours that light onto a slanted mirror that bounces it onto the aluminum-coated greenhouse roof, which scatters it over the plants on the walls and floor. The light is spread enough to dilute it for maximum yield of the widest range of plants - even plants that like full sun are happy with sun that is about 2/3 the strength of sunlight on Earth, and sun on the Moon is about 30% stronger than that. That spreading also makes it only very weakly directional, it is more like sun through frosted glass.</p>
  <p>The greenhouse is two round pits surrounded by berms, with sloping walls and circular floors. They are each covered by a shallow, solid stone dome held down by basalt cables, which has a few meters of regolith on top. These domes overlap by about a sixth of their diameter, and in the middle of that overlap is the light tube with its big parabolic mirror on top funneling a ton of light down into the greenhouse as it tracks the sun. A passage between the two sides inside the structure holds the mirror that bounces that light to the domes. That mirror holds position for 12 hours, then it rotates and holds position for another 12 hours. Each dome is 100 m across. From floor to the top of the slope is a height of 20 m, and the dome rises 20 m more. </p>
@@ -68,7 +68,7 @@
  <p>The two halves of the greenhouse have very different projects. One side is focused on food crops, including raising insect crops for protein. The other side is focused on ecosystem research -  searching for the combination of plants and animals that will establish a network of relationships that support each other, so  the ecosystem is stable without intervention. Because the populations inside that half need to be monitored carefully, it is isolated from the other side, as much as possible. The mirror setup is built to remain sealed from the other side when it turns, the passage can only be reached by going through two doors with tight seals around them. It doesn't stop transmission of micro-organisms or spores, but it makes the picture of the dynamics within that greenhouse easier to see. A few animals have already been successfully brought to the Moon - earthworms, a few pollinating insects, small fish. This greenhouse gets a much larger set.</p>
  <p>As the atmosphere of the colony is custom designed, a higher proportion of carbon dioxide is established in it, to accentuate plant growth. It is set at 0.2%, or 2000 ppm, 5 times the current level on Earth. This is low enough to have no impact on the health of the crew, and is a feast for the plants.</p>
 </details>
-<details>
+<details id="basicIndustry">
  <summary><h5>Research into Basic Industry</h5></summary>
   <p>Working with molten regolith of various sorts has been developed pretty far. They can make fabric and rope out of basalt, and a wide range of stone and glassy objects<sup class="note tooltip" data-tooltip-content="#glassy">[?]</sup> and materials, some reinforced with glass fibers. These materials fulfill almost all structural needs well. The priority at this point is to develop local processes for producing the other building blocks of an industrial society out of local materials. Some things will take time, certain things can make a big difference in the short term.</p>
   <div class="tooltip_templates">
@@ -91,7 +91,7 @@
     <li><b>Sapphire and Quartz</b> - Both of these crystals have very low thermal expansion coefficients, can withstand high temperatures, are chemically stable, strong, and highly transparent over a wide spectrum. Once alumina and silica -  their normal, non-crystal forms - can be refined out of the regolith in quantity, reactors to produce large crystals of them will be set up. On Earth today, large items made of quartz and sapphire are available. Further evolution of that technology enables massive lenses, panes, domes, and tubes of sapphire or quartz. Because constant intense sun is perhaps the Moon's greatest natural resource, such items will be used to do many things that on Earth are accomplished in other ways. Anything that can be done with heat, is probably best done with heat on the Moon. Better to reduce use of chemical processes, as the Moon is almost completely devoid of most common catalysts and reagents.</li>
   </ul>
 </details>
-<details>
+<details id="aroundMoon">
  <summary><h5>Missions Around the Moon</h5></summary>
  <p>The LNCs now have much greater liberty to make sorties to anywhere on the Moon, as the ice mines provide plenty of fuel and the skyhooks make fuel requirements very low. The combined complement of almost 300 people on the Moon by the end of this phase provides plenty of skilled operators for these sorties.</p>
  <ul>
