--- a/_includes/timeline/ph2-summary.html
+++ b/_includes/timeline/ph2-summary.html
@@ -1,6 +1,6 @@
 <div class="columnSet">
 <div class="spanAll">
-  <details>
+  <details id="ph2summary">
   <summary>Status by the end of this phase:</summary>
   <ul>
     <li>There are 250 people living on the Moon - 200 First Rounders and 50 ISA staff.</li>
