--- a/_includes/timeline/ph3-soceco.html
+++ b/_includes/timeline/ph3-soceco.html
@@ -1,7 +1,7 @@
 <article class="column">
-  <details>
+  <details id="lunarLife">
     <summary><h5>Lunar Life</h5></summary>
-    <details>
+    <details id="uniqueCulture">
       <summary>A New and Unique Culture</summary>
     <p>The residents begin to form a culture of their own. Their environment has caused them to quickly develop unique customs - in sports, crafts, cuisine, fashion, dance, hobbies. A few examples:</p>
     <ul>
@@ -13,11 +13,11 @@
       <li>They start to enjoy a casual passtime of water-tossing. This is the act of tossing a mug or a bucket of some fluid, usually water, between people who may be several meters apart. The low gravity gives people time to line up a recipient to properly catch the liquid, and allows that liquid to remain more cohesive, instead of splitting into droplets. There is of course an art to it, which keeps it interesting.</li>
     </ul>
   </details>
-  <details>
+  <details id="roboticSociety">
     <summary>Robotic Society</summary>
     <p>The Moon has become the place with the highest density of robots anywhere, and they are used for everything. Many chosen residents are specialists in robotics. Their work on improving them leads to advances that are also used on Earth. The Moon population becomes very adept at creating systems for robots to do things efficiently, quickly, and well. The populace develops the habits that used to be the domain only of people who had personal staffs, meaning the very wealthy. Many robots are so sophisticated they are treated not very differently than servants. They are given verbal instructions and respond verbally, they modify their behavior in real time and usually adapt it to an unforeseen event or factor without needing to consult anyone. They can even work in teams. This impacts the psychology of the residents deeply. In broad terms, their behavior aligns most closely to the aristocracy in Europe at the peak of the Industrial Revolution - they restrict themselves to intellectual pursuits, have exacting standards, and are used to ordering people around - even though now they are ordering robots, not actual people. </p>
   </details>
-  <details>
+  <details id="tribeSociety">
     <summary>The Beginning of Tribe Society</summary>
     <p>Residents continue to train together in groups of 20 or 30 people before they go to the Moon, and to continue to organize themselves around shared kitchens, baths, and laundry facilities. About half-way through this period, this stops being because there is any need to do this. It's because they prefer to do this. Robots do the drudgery anyhow - they clean up after cooking and eating, wash the clothes, fold them, and put them away, sweep the floor, all that sort of thing. So, it is rather nice for people to gather, cook together, and eat together, just as a social activity. Since there are no children, people feel a broader need for contact like this. </p>
     <p>People now mostly put a small kitchen and bathroom in their homes. The toilets work without water, so the waste is easily collected for processing for the gardens or for topsoil production. The robots do that, no biggie. The robots also usually are the ones who refill the water tank for the shower and sink, every day or two. And they switch out the ice packs in the ice-boxes, and clean the microwave and the grill, or what have you. Some people like to do that themselves. Or they just go to the shared baths and eat always in the shared kitchens, just a quick sandwich if need be.</p>
@@ -26,12 +26,12 @@
   </details>
 
 </details>
-  <details>
+  <details id="moonAgency">
     <summary><h5>The Moon Agency</h5></summary>
     <p>The colonies have become entities that really should govern themselves. Their awareness of the environment they live in, and the tools at their disposal, is so much greater than the ISA, and the colonies are so complex, it is agreed that administration of all lunar installations should be by the people who live there. The local leaders remain bound by the Space Settlement Treaty. That treaty has now been ratified by and extended to almost all nations, as they almost all have astronauts up there.  </p>
     <p>The SST makes it easier to decide to grant control directly to the colonists. The colonies are quickly becoming a seat of power. By the end of this phase, everyone can see that. The great good fortune is that the policies of openness and sharing that were established from the outset and have been carefully strengthened over time means that the Earth is comfortable granting the Moon direct control over all that power.</p>
     <p>Their intellectual property has always been open source according to the treaty. They are accustomed to that and have no issue with it. So the nations of Earth don't fear loss of access to the technology developed through the colonies. The SST is also iron-clad regarding access to information about the colonies' activities. Aside from the private lives of the colonists, virtually all events in the colonies are monitored closely and that data is public, and instantly available. If the colonists do anything upsetting, everyone will know right away. Robotic control has also in the end made things more secure. The programming of those robots is public record, everyone knows what they are programmed to do. Nobody can change that programming on their own, it has to go through a process. The robots were designed very, very carefully for it not to be possible to reprogram them outside of that process. In the spirit of Asimov's Three Laws, it is also not possible to make them do something destructive. (They still don't think for themselves, they are fancy automatons, so that is still a feasible proposition.) </p>
-    <details>
+    <details id="localAdmin">
       <summary><h5>Local Administration</h5></summary>
       <p>The MA now runs all the infrastructure in space, much of which is important to businesses and institutions on Earth. Under the Space Settlement Treaty, the MA must keep all the things previously administered by the ISA working properly - the skyhooks and their fleets, all the satellites, telescopes, sensor networks, power plants, and utilities used by Earth-based concerns. As long as they do that, nobody else has any say in what they do.
       </p>
@@ -42,7 +42,7 @@
       <p>So, although such essential things as farming, air and water treatment, power, and communications are now all done by private companies, a large part of their output is bought by the Moon Agency, who then does not charge for public use of it. The highly automated nature of these operations makes this an easy thing to manage - the Moon Agency doesn't expend much of its resources guaranteeing the essentials, and there is no lack. The pervasive monitoring the colonies have always had also makes it easy to monitor usage. It is impossible to hide a level of consumption that would qualify as abuse, so that doesn't happen. It also helps that most of the output of  companies providing essential services is both produced by, and consumed by, the colonists.
       </p>
     </details>
-    <details>
+    <details id="essentialGuar">
       <summary><h5>The Essential Guarantee</h5></summary>
       <p>Food is the case that is really instructive in this system. About a fifth of the food supply is still imported from Earth and that expense is significant. Those foods also tend to be people's favorites. Locally produced foods that are favored over other foods are also in shorter supply than many would prefer.
       </p>
@@ -60,7 +60,7 @@
     </details>
   </details>
 
-  <details>
+  <details id="broadcasting">
     <summary><h5>Broadcasting and its Impact</h5></summary>
     <p>From the beginning the colonists have regularly broadcast shows back to Earth. This has always been one of the conditions of being a resident. A bunch of these shows become quite popular on Earth, even during phase 1. There is a range of them, in many languages. Many residents also do extra shows on their own time, usually video blogs.</p>
     <p>That was the plan from the beginning. It goes a long way to maintaining high public support for the program, and is widely recognized as the principal source of a cultural shift around the globe towards an emphasis on science, and a decrease in nationalist sentiment.</p>
@@ -69,7 +69,7 @@
     <p>A lot of the money they earn stays on Earth. They use it to back ventures they have an interest in or help out their families. The rest is for having luxuries shipped to them. This mostly involves foods that are in short supply on the Moon (chocolate, cheese, fine liquor and wine, beef, seafood), fine clothing and jewelry, furnishings, and personal electronics. The food, clothing, and goods shipped up by the MA are high quality and include some of all the listed luxuries, plus favorite items for each resident. But more and better is always welcome.</p>
     <p>Fashions from the Moon spread to Earth. Interest in science education is at an all-time high. Belligerent posturing in politics is at an all-time low. This is all thanks to the intimate contact the people of Earth have with the colonists. The fact the program has led to many advances in technology and science supports this dynamic a lot. In particular, it's clear that even with the vast investments made to build the colonies and the transport systems in space, the break-even point is not far away. Everybody loves space now.</p>
   </details>
-  <details>
+  <details id="moonFund">
     <summary><h5>Privatization and The Moon Fund</h5></summary>
     <p>More or less everything that has happened up to this point was anticipated when the Space Settlement Treaty was finalized. It was written into the treaty that once commerce and industry in space reached certain milestones, industry would be privatized, and institutions would be created to facilitate and regulate a market. Towards the end of this phase, that happens.</p>
 
@@ -90,7 +90,7 @@
       Some of the created companies work almost entirely for the Moon Agency, as mentioned in Local Administration. This is one of many things that makes a local currency necessary.
     </p>
   </details>
-  <details>
+  <details id="currency">
     <summary><h5>Local Virtual Currency and Contracts</h5></summary>
     <p>The colonies are even more saturated with personal computing devices, cloud services, and local networks than the world today. Software for a virtual currency is created and adopted as the standard unit for trade on the colonies. That same software is the basis for forming contracts quickly and easily.
     </p>
