--- a/_includes/timeline/ph4-soceco.html
+++ b/_includes/timeline/ph4-soceco.html
@@ -1,5 +1,5 @@
   <article class="column">
-    <details>
+    <details id="children">
       <summary><h5>Children</h5></summary>
       <p> We are conjecturing that a full gravity environment is required at all times for the proper health of unborn children, and that toddlers are slowly able to adapt to lunar gravity for ever longer stretches. It is critical for healthy development of growing children that they maintain a vigorous exercise regimen that includes swimming, physical exercise while in centrifuge environments, and lots of jumping, acrobatics, vertical playgrounds, and lunar parkour. As similar activity remains important for adults too, all this activity is heavily integrated into lunar society and its architecture. Children may need supplements or medicines to help regulate their growth and their bodies, perhaps more so at certain stages of development.
       </p>
@@ -17,7 +17,7 @@
       </p>
     </details>
 
-    <details>
+    <details id="tribalLife">
       <summary><h5>Tribal Life</h5></summary>
       <p>Everything is centered around tribes on the Moon. They ensure humanity in a place that is heavily robotized, automated, and computerized. They provide social cohesion in a place composed of a mish-mash of every culture on Earth, while allowing enough autonomy to preserve different ways of life. They prevent authority from becoming concentrated in a place where all the needs of life can only be provided by using a ton of complex technology, which could easily be abused if control was in the hands of few people. From the beginning, tribal organization was fostered in order to keep people looking out for each other and holding together in a dangerous, alien place. Once it seeps into the fundamental fabric of lunar society, it is enshrined as the central pillar of everything.
       </p>
@@ -45,7 +45,7 @@
       <p>Tribes receive an incentive package to encourage them to adopt 'strays' without tribe due to disbandment. They are probably going to be a lot of work or difficult to integrate into their group, so incentives are needed. Disbandment is pretty rare, though. Strays start to be a minor phenomenon when immigration begins. Some arriving immigrants want to be part of existing tribes and seek to get adopted by one. Ones with children or planning to have children have no trouble swinging such a deal. The MA doesn't offer incentives in such cases. If an immigrant can't convince a tribe to take them, they usually get placed in a new tribe like most immigrants. Sometimes the MA decides to offer an incentive package for a mature tribe to take them, if they see trouble ahead with them.
       </p>
     </details>
-    <details>
+    <details id="economy">
       <summary><h5>The Economy</h5></summary>
       <p>Businesses and projects the Moon participates in now provide a large chunk of Earth's electrical power, and most of its communications, surveillance, and observations of all kinds, from weather to traffic. All of these markets are large and highly profitable.
       </p>
