--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -1,6 +1,6 @@
 <div class="columnSet">
-<article class="spanAll" id="residenceProgramChart">
-  <details>
+<article class="spanAll">
+  <details id="residenceProgramChart">
   <summary><h2>The Residence Program - Structure and rules of the 7 rounds</h2></summary>
   <p> Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony.</p>
   <table>
