--- a/_includes/timeline/ph3-trans.html
+++ b/_includes/timeline/ph3-trans.html
@@ -1,9 +1,9 @@
 <div class="columnSet" id="LalandeCol">
-  <article class="column" id="AsteroidsShipyard">
-    <details>
+  <article class="column">
+    <details id="AsteroidsShipyard">
       <summary><h5>Fleet Expansion - More Fetching, and the Interplanetary Fleet</h5></summary>
       <p>This phase sees the expansion of the lunar fleet to 10 Pod ships (max. payload 250 tons), 14 LNCs (max. payload 250 tons), 10 Hoppers (max. payload 40 tons), and 12 Fetchers (max. payload dimensions 50 m across). All models of ship have been improved, the earlier ones overhauled to the new standards. It also sees the dawn of interplanetary ships.</p>
-      <details>
+      <details id="fetchHop">
         <summary>Better Fetchers and Hoppers</summary>
       <p> The Fetchers and Hoppers are souped up a lot. Now each Fetcher that's on standby (4 of them, 2 at each of the equatorial skyhooks) is attached to a nuclear thermal Hopper on standby. When a target of opportunity comes around, the Hoppers act as a first stage to the Fetchers, accelerating them towards their targets so they reach them much sooner. The kind of acceleration they need to do now justifies them all having nuclear thermal engines. Once the Fetcher is released, the Hopper returns. If necessary, it uses all its fuel on the boost, except what it needs to brake after release and enter an orbit around Earth or the Moon. If that is necessary, a Pod ship or another Hopper is then sent to retrieve it.</p>
       <p>Given the kind of boost the Fetchers get when they are launched, typically they now have to shed speed when they approach their targets. If they were to do that with their low-thrust, high-efficiency engines, it would take a long time and negate a lot the value of the boost they got. So they have frames that can be loaded with tiny solid-fuel boosters during launch prep, however many are needed to do most of the braking on approach. They ignite the number of booster sticks needed to brake sufficiently and use thrusters and their main engines for the rest.
@@ -12,7 +12,7 @@
       <p>Other than that, the Fetchers are larger, and are set up for modular last-minute assembly with the appropriate set of pieces, depending on the nature of the target. Characterization of the asteroids spotted has improved. If they are judged sufficiently solid and rigid, the complex SHEPHERD bagging mechanism isn't used. Instead the asteroid is just wrapped in a net for hauling, which is much lighter. It is also possible to vary the number of engines and size the fuel tank to the target. </p>
       <p>The net result of all this activity is examined under the Gagarin Station - Asteroid Mining Arrives section.</p>
     </details>
-    <details>
+    <details id="interplanShips">
       <summary>Interplanetary ships</summary>
       <p>Three ships are built that will make many journeys around the solar system:</p>
       <ul>
@@ -22,7 +22,7 @@
       </ul>
     </details>
     </details>
-    <details>
+    <details id="finalSkyhooks">
       <summary><h5>Final 2 Skyhooks </h5></summary>
       <p>One more polar skyhook is built, and named Babel. A second equatorial skyhook is erected and named Magnificent Desolation, or more commonly, Maggie. The second skyhook on the equator is always on the opposite side of the Moon from Gagarin. The orbital period of all the skyhooks is the same. If they were all in one plane, each of the three polar skyhooks would be 120&deg; from the other two. This keeps all the skyhooks as far apart from each other as possible. It also means that during the night, the new colony at Cernan's Promise has a line of sight to the anchor station on at least one skyhook most of the time. This way power from the solar arrays on those stations can be beamed to the colony's microwave receiver most of the time.</p>
       <p>The existence of three polar skyhooks means one of them passes within 3&deg; east or west of any spot on the Moon once every 5 days. A LNC that wasn't heavily loaded could manage the  extra distance and the turn necessary to meet up with the closest foot platform on any pass. So, most of the time, a LNC with a regular payload can go to or from anywhere, if needed, with a delay of no more than 14 hours (the time it takes a skyhook to orbit once). (A LNC that is near empty can also go point to point anywhere at any time, in the event of an emergency.)</p>
@@ -30,28 +30,28 @@
       <p>Because asteroid retrieval remains a matter of reaching the very small Near Earth Asteroids, which are far more numerous than larger ones, having launch windows for pursuit of new targets open twice as often is a big help. As traffic to various points in the solar systems grows, the flexibility and added capacity of two equatorial skyhooks will become increasingly useful. </p>
       <p>Each of the new skyhooks is given a 10 kiloton asteroid as an anchor mass. As these asteroids are mined, material removed is replaced by material sent up from the surface, to preserve that mass. They are set up with solar panel arrays, power equipment, and microwave transmitters so they can beam power to the colonies. They don't get space stations. The mining done on them is almost completely automated, and what isn't, is done by tele-operation. In the rare event that people have a reason to be on the anchor, a crew pod can be placed on the climber car and sent up, or a ship can dock with it.  </p>
     </details>
-    <details>
+    <details id="gagarinShipyard">
       <summary><h5>Gagarin Shipyard</h5></summary>
       <p>The shipyard goes into full swing. In addition to the materials Cernan's Promise produces for it, machinery and robots to turn ore from asteroids into usable materials, and fabricate things on-site, is created, and multiplies over this phase. Most of that infrastructure comes from the factories at CP. Components and modules for spacecraft and space stations are also sent up the tether, and at the shipyard are assembled. Many of the arriving structures are incorporated into Gagarin itself, filling out and extending the superstructure according to the long-term plan it was designed for. More about that, and manufacturing there, in the Gagarin Station section.</p>
       <p>Once fully operational, all interplanetary missions launch from Gagarin's skyhook, after their craft have been assembled there. The Rumi, the Li Bai, and the Roddenberry are built in its yards. It is the existence of Gagarin and Cernan's Promise that allows those ships to be so big and powerful. Most satellites of Earth launch from Gagarin as well. Of the ones that don't, most launch from the EESS after final assembly there, which usually includes the addition of parts from the Moon (such as solar panels or Neumann Drives). Some manufacturing processes that require micro-gravity occur at Gagarin as well.</p>
       <p>Crews for deep space missions usually do final training at Gagarin. It's also common for at least part of the crew to be drawn from the crews of Gagarin and Crossroads.</p>
 
     </details>
-    <details>
+    <details id="interplanMissions">
       <summary><h5>Interplanetary Launches from Gagarin</h5></summary>
       <p>The ships, fuel, and tether launch facilities of Gagarin allow the launch of a number of deep space missions with a scale and scope never previously possible. Thanks to Zylon produced on the Moon, Gagarin's tether cables have been massively upgraded. The upper tether is now able to dock ships massing 10 kilotons. The tether has already been used to sling probes on trajectories to Venus and Mars with such speed that no fuel is needed to arrive. At those destinations, aerobraking is used to enter orbit. That means ships can go to either world using only maneuvering thrusters. Their massive 10 kiloton bulk would be almost entirely payload. </p>
       <p>Or, with high specific impulse engines like VASIMR, a small fraction of the payload could be sacrificed for the sake of really short trip times. For more distant destinations, engines and fuel are needed. To get to Callisto, Jupiter's outer moon, with VASIMR drives about 1/6th of the ship would be fuel. Increase that to a third or a half, and that trip can be shortened from around 3 years to less than a year. </p>
       <p>In most cases the spacecraft sent are only a tiny fraction of 10 kilotons. The reason the tether has been beefed up to take something so massive is for the missions to Phobos. </p>
-      <details>
+      <details id="phobosMissions">
         <summary>Phobos and Mars</summary>
         <p>Phobos is a small moon orbiting about 6000 km above the equator of Mars. It's a dusty potato-shaped thing, with a giant crater at one end. Three missions are sent there. The first is a research, scouting, and prepping mission, the second is the undertaking of building a skyhook around it, essentially turning Phobos into its anchor mass, the third brings people who tele-operate the robots landed on the Martian surface, exploring and experimenting.</p>
         <p>
-        <details>
+        <details id="phobos1">
           <summary>Mission One - Research and Prep</summary>
           <p>This is the Liu's maiden voyage. It gets the Mars system ready for intense activity. On Phobos, a set of spider-legged walking rovers and a small swarm of orbiters are deployed to examine the whole surface. It is widely sampled, scanned with ground-penetrating radar, and its inner structure mapped with seismic imaging. A large and complete lab does batteries of tests and detailed analysis. Several holes are bored 200 m deep and probed for water ice. A transmitter is set up that can send high volumes of data back to Earth. Engineering tests are done for planning of the next mission. Prototype equipment is tested. </p>
           <p>It also deploys a set of GPS satellites for surface navigation on Mars, and a set of superb observation satellites that image the surface in high detail in lots of wavelengths, and scan with radar and lidar. Deimos is also examined, by the Liu itself. After a bunch of samples have been collected from both moons and all the equipment is working, the Liu returns to the Moon.</p>
         </details>
-        <details>
+        <details id="phobos2">
           <summary>Mission Two - Space Elevator and Initial Mars Operations</summary>
           <p>This was inspired by the post about <a href="https://hopsblog-hop.blogspot.mx/2016/01/upper-phobos-tether.html">just such an elevator</a> in 2016, on <a href="https://hopsblog-hop.blogspot.mx/">Hop's Blog</a></p>
           <ul>
@@ -66,7 +66,7 @@
             <span id="marswater">There is no evidence of subsurface water at the equator of Mars, where the LNC would be dropped. If there was, there could be a prototype plant producing methane, from the water and the carbon dioxide that makes up most of the atmosphere. This process was first proposed for fuel production on Mars by Bob Zubrin as part of Mars Direct.</span>
           </div>
         </details>
-        <details>
+        <details id="phobos3">
           <summary>Mission Three - Crew of 12</summary>
           <p>The crew gets to Phobos in less than 2 months, aboard the Liu.</p>
           <p>At Phobos, except for a few EVAs, the crew works from inside the Liu. Phobos appears to be deeply covered in fine dust. It has a very weak gravity field. The rovers were designed to deal with that, humans on the surface could quickly be enveloped in a cloud of dust in which they flounder blind. It is better for most operations to be conducted remotely.</p>
@@ -77,17 +77,17 @@
 
       </details>
       </details>
-      <details>
+      <details id="venusMission">
         <summary>Cloud-tops of Venus</summary>
         <p>A series of probes and test vehicles are sent to the atmosphere of Venus. They are designed to stay aloft by inflating with nitrogen gas once they are released from the delivery vessel, about 50 km from the ground. Once a good design is found, several larger versions are sent.</p>
         <p>Settling Venus by creating floating cities has been <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20160006329.pdf">studied recently at NASA.</a> These missions explore Venus from above while developing the technology needed to create a structure that could stay aloft indefinitely, doing repair and maintenance without outside assistance.</p>
       </details>
-      <details>
+      <details id="mercurySail">
         <summary>Sailing to Mercury</summary>
         <p>Solar sails become ever more effective the closer they get to the sun. Mercury, as the planet closest to the sun's gigantic gravity well, requires as much delta V to reach as distant Uranus. So, it is a good target for missions that develop solar sail technology.</p>
         <p>Launching a solar sail vessel from a skyhook tip platform allows sails of truly vast size to be unfurled prior to release of the vessel. This is the key to making them an effective way of moving things around the solar system. Development of membranes that are sufficiently light, strong, and durable is spurred by sending a series of probes to Mercury propelled by light sails. </p>
       </details>
-      <details>
+      <details id="ceresMiss">
         <summary>Ceres</summary>
         <p>Ceres is a wonderful place to get stuff for the Moon. It's a really interesting place in its own right too. But it's hard not to drool over it as a resource if you live on the Moon. All evidence points to it being composed largely of water ice, mixed with a variety of clays and salts full of key things the Moon lacks - carbon, nitrogen, chlorine.</p>
         <p>Farther from the sun there are lots of big snowball moons made mostly of water ice, because out there it is stable even in direct sunlight. Ceres is the place closest to us that is like that - a mantle of muddy ice wrapped around a rocky core - but only because a layer of dust has protected the ice from the heat of the sun. It is half the distance away as the moons of Jupiter and has a fraction of their surface gravity. It is just begging to be mined (as the show <a href="http://www.syfy.com/theexpanse">The Expanse</a> has noted).</p>
@@ -95,7 +95,7 @@
         <p>This is the Roddenberry's first stop on its maiden mission. It carries a <a href="https://hopsblog-hop.blogspot.mx/2012/09/beanstalks-elevators-clarke-towers.html">mini space elevator</a> with which it will attach to the surface from a position in synchronous orbit around it, at an altitude of 706 km. It feeds out the tether for this, and also an upper tether about the same length, keeping the center of gravity of the system balanced at that synchronous altitude. The Ceres LNC, already sent down, delivers equipment that anchors that tether to the ground. The climber car is sent down and loaded, and starts ferrying up the material that will form the anchor mass once the Roddenberry leaves. In all, the tether and its infrastructure mass only about 200 tons - a modest tether building project by this time. Together with the LNC, equipment, and supplies for surface operations, the payload for Ceres is about 400 tons. </p>
         <p>During initial construction of the space elevator, the Roddenberry's reactors provide power. Once it is anchored, a large solar panel array is attached to the upper tether. As the light at that distance is weak, the array has to be very large to provide sufficient power. Because gravity is so low, that power can simply be passed to the surface, and to the climber car, through wires connected to the space elevator cables. There is no need to save mass by transmitting power as microwaves. The reactor of the LNC also provides power when it isn't flying, which is most of the time. The LNC was designed as much to perform this duty, as to do transport. When its departure date for Jupiter arrives, the Roddenberry breaks orbit and heads for Callisto. </p>
       </details>
-      <details>
+      <details id="callistoMiss">
         <summary>Callisto</summary>
         <p>Callisto orbits just outside Jupiter's powerful radiation belts, but inside its magnetosphere. That makes it the most attractive destination in the Jovian system. The radiation belts soak the surfaces of the other main Jovian moons in ionizing radiation. By contrast, the protection Callisto gets from Jupiter's magnetosphere makes it one of the solar system's most sheltered places from radiation. Its surface is a mixture of ice and rock. Patches of pure water ice exist on the very surface of Callisto. It also has hydrated silicates and ices of carbon dioxide and sulfur dioxide. Best of all, it is the size of the planet Mercury - truly a world. </p>
         <p>Callisto will be the base for exploration of the whole Jovian system. To do that, its water ice needs to be mined and processed into fuel for the Callisto LNC and the observation satellites sent to the Galilean moons and to orbit Jupiter. The Roddenberry pulls into orbit around Callisto, and once a suitable patch of water ice has been found near a pole<sup class="note tooltip" data-tooltip-content="#polevolatiles">[?]</sup>, it sends down the LNC that will set up the equipment to melt it, purify it, process it into hydrogen and oxygen, and store it. A nuclear reactor is set up to power the equipment. In this case, that reactor is incorporated into a rover. When enough fuel is stored, it disconnects from the fuel production station and goes exploring. </p>
@@ -106,7 +106,7 @@
         <p> That done, the two ships return to Callisto. The LNC and the Roddenberry land, together fill Rod's tanks, and then Rod returns to Earth.</p>
       </details>
     </details>
-    <details>
+    <details id="spacestation2">
       <summary><h5>2nd Earth-orbiting Space Station</h5></summary>
       <p>Using modules, tanks, solar panels, trusses, motors, pumps, radiators, and engines made on the Moon almost entirely from lunar and asteroid materials, another space station is placed in an equatorial orbit around Earth. The robots and ships that assemble the pieces are also made almost entirely on the Moon from lunar materials. </p>
       <p>This station is two cylinders on opposite sides of a spherical central hub. Around the hub is a box of trusses with open sides, large enough to extend over the near ends of the cylinders. The solar panel wings extend from either side of the box. Each cylinder spins fast enough to create a centrifugal force equal to a full Earth gravity on their outer walls. One spins clockwise, the other counterclockwise, and the hub remains stationary. </p>
