--- a/_includes/timeline/ph4-dev.html
+++ b/_includes/timeline/ph4-dev.html
@@ -1,5 +1,5 @@
   <article class="column">
-    <details>
+    <details id="end2endRobots">
       <summary><h5>End-to-End Robots</h5></summary>
         <p>Robots move from being able to execute a step-by-step plan, to being able to make a plan that will satisfy a set of objectives they have been tasked with fulfilling. The first mega-project they are then tasked with is the construction of Lalande City. The robot team that does it is presented with detailed engineering plans for the city and some parameters for the resources they may use, and told 'go'.
         </p>
@@ -12,7 +12,7 @@
         <p>Once all these robots finish, shortly into the next phase, they need to be assigned to something else. Some are instructed to keep building more cities on the Moon. Those next cities start without an initial colony nearby to support the initial phases of the project, or even detailed plans. But that's okay. They figure out how to build that initial base for operations, and how to adapt the previous plans to the new craters. They start turning out a new city every decade, rated for populations of one to two million. The implications of all this are discussed in Birth of Worlds</p>
         <p>Robots become sort of invisible hands that look after all the details, leaving humans free for creative, intellectual, and spiritual pursuits. They do not develop wills of their own.</p>
     </details>
-    <details>
+    <details id="lalandeCity">
       <summary><h5>Lalande City</h5></summary>
         <p>The dome over Lalande Crater is 23 km across on average. The rim ring is 250 m wide, rises 400 m above the rim, and extends 300 m below it. It is heavily reinforced with thick cables that connect to the cables of the dome, and anchor them to the bedrock through shafts at hundreds of points. There are over 80 towers spread throughout the crater that anchor the dome at those points, containing the outward strain of the atmosphere pushing against it. Though the total thickness of the laminated glass of the dome is 3 m, it is still only a fraction of what it would take to counterbalance the pressure of the city's atmosphere. The towers are built around central cores of CNT cable. They are very solid structures of metal, glass, basalt, and composites capable of supporting the dome even if the city loses 95% of its atmosphere. In the center of Lalande they are 5 km tall, near the rim they are 1 km tall. The dome has been built around Cernan's Promise, now it is entirely indoors. It's buildings are preserved for history. </p>
         <p>The towers and rim are where people live in Lalande. The ground is set aside for 'nature'. It has a few facilities for physical activity or public gatherings, but 95% is vegetation or water bodies. Institutional buildings and hospitals are dotted around the crater floor, but they are subterranean, built inside artificial hillocks, hobbit style. Maintenance facilities are all truly subterranean, and inhabited solely by robots. Factories and research facilities are all outside the rim, as are power plants and supplementary greenhouses. Factories are also clustered along the tunnel to the space port 35 km northeast of the city.
@@ -29,13 +29,13 @@
         <p>Broad suspension bridges link the towers, wide enough to be landscaped with gardens of their own and have kiosks and cafes dotted along them. They are spaced every kilometer up the towers. The arches between towers that support the dome also have several levels of walkways hanging beneath them. </p>
         <p>It takes a decade for the population of the city to fill out. While it does, the countryside fills out with it, the trees rising and thickening into forests, moss covering rocks, vines climbing the towers.</p>
     </details>
-    <details>
+    <details id="poweSupply">
       <summary><h5>Power Supply</h5></summary>
         <p>A mix of power sources is developed for the Moon. Nuclear reactors run on thorium and uranium, solar thermal plants produce power while melting regolith to extract volatiles and produce molten feedstock for production of glasses, ceramics, and metals, microwave rectenna grids receive power from orbital solar wings. Flywheels are used to smooth out the matching of supply and demand.</p>
         <p>
         </p>
     </details>
-    <details>
+    <details id="ansharStation">
       <summary><h5>Anshar Station</h5></summary>
         <p>As mentioned in the Anshar Skyhook section, mass is added to the anchor of Anshar as quickly as possible. Much of it arrives as rubble - fragile rubble pile asteroids are intentionally allowed to disintegrate during transport so they are easily mined to extract their carbon and water. The metal asteroid that arrived first and formed the initial anchor during skyhook construction is slowly processed to recover the metals dissolved in the iron that forms 92% of its mass. All of that metal is in high demand, but there is so much iron, and so many of its traditional uses have been taken over by other substances, it has little value. While it is still molten, at the end of the refining process, it is drawn into rods of between 10 and 100 m in length, whose ends are fused together into a gigantic latticework of tetrahedra. This latticework extends outward from a section three-quarters of the way up the enormous stone shaft bridging the center of gravity of the skyhook, where the upper and lower tethers are joined together. It is employed as bulk shelving and support frames for processing and fabrication units that operate within the lattice.
         </p>
@@ -49,8 +49,8 @@
         </p>
         <p>Anshar is mostly a workplace. People usually come for stints of between one to five years, but almost nobody moves there to stay. Most people come for work or pleasure, and spend only a few days to a few weeks there.
         </p>
-        <details>
-          <summary><h5>Manufacturing on Ashar</h5></summary>
+        <details id="manuAnshar">
+          <summary><h5>Manufacturing on Anshar</h5></summary>
           <p>Several double spheres like the ones at the Gagarin Shipyard are built on top of the lattice. All the manufacturing techniques pioneered on Gagarin are shortly also being done at Anshar. Gagarin concentrates on spacecraft and space construction equipment. Anshar gets into all sorts of things.
           </p>
           <p>As mentioned under Anshar Skyhook, mining of all sorts of metals is profitable at Anshar. As operations expand and economies of scale take hold, even more become profitable. But not much bulk metal is sent to Earth. It is used to make things that are much more valuable, and those things are shipped to Earth - or to the Moon.
@@ -61,7 +61,7 @@
           </p>
         </details>
     </details>
-    <details>
+    <details id="hepitAnchor">
       <summary><h5>Hepit Foot and Anchor Stations</h5></summary>
       <p>Hepit is the 400 metric kiloton foot station of Hepit Skyhook, Earth's launcher skyhook. It is a half dome made of a honeycomb of cells of laminated quartz filled with water, 1.5 m thick, measuring 300 m across and 150 m high at the center. Its floor and internal structures are made of plastic and aluminum alloys reinforced with graphene or CNT. The lower tether of the skyhook pierces the dome at the center, and its cables are used to support a building that spans the middle 100 m of the dome, and extends through its floor. That building descends 100 m below the floor of the dome, and rises to 50 m from the dome itself. Hanging below it are the docks for the craft coming and going from that tether. A tube at the core of that building cuts through the whole dome, so the climber cars can pass through it to reach the docks, load and unload, and transfer people and cargo to the skyhook's anchor station.
       </p>
@@ -71,7 +71,7 @@
       <p>Hepit's anchor station is all business, designed almost entirely simply to facilitate traffic between Hepit and Anshar. Most traffic on Hepit is either people or cargo arriving from other worlds and headed to Earth's surface or the manufacturing in the lattice of Anshar, or leaving on the way to other worlds. In all these cases, a hop from Hepit to Anshar, or vice-versa, is involved. Traffic to and from Earth's surface occurs almost exclusively on Anshar. The first waystation on the upper tether is a release point for Hoppers headed to Anshar, that gives them an orbit with an apoapsis at the altitude of its main docks. Hoppers coming in from Anshar release from a similar waystation that gives them a periapsis at the altitude of the anchor docks of Hepit. </p>
       <p>Most of the activity at the station is simply robots moving back and forth in the hollow core of its stone shaft, ferrying cargo and passenger pods. The only bits of it that are pressurized are a few small maintenance modules and an emergency shelter. Three-quarters of the way up the anchor shaft, many bags of Phobos dust are strapped to it. They form almost all the anchor mass of this skyhook. The material is of no mining interest, it is strictly bulk for stabilizing the skyhook.</p>
     </details>
-    <details>
+    <details id="cylinders">
       <summary><h5>Cylinders</h5></summary>
       <p>As discussed below in Birth of Worlds, O'Neill cylinders are crucial to development across the worlds of the SITH. At Gagarin and Anshar, the superstructure of cylinders for all the surface skyhooks is fabricated by the end of this phase. The Chukwas take them to their destinations, along with the robot crews that assemble them and then complete the construction of the cylinder colonies.</p>
       <p>The first twin-cylinder colony is built on Magnificent Desolation. Like Gagarin, it gets a cylinder that extends south of the tuning-fork shape of the climber docks. In its case, there is another cylinder just the same that extends to the north. Ships are ferried down the upper tether and berthed above the two cylinders. While they are still under construction, many of those ships arrive bearing Phobos dust for their radiation shields. Slag from Gagarin and Anshar is added to the shielding too.</p>
