--- a/_includes/machines/machinesMining.html
+++ b/_includes/machines/machinesMining.html
@@ -61,11 +61,9 @@
 <div class="container" id="solarFurnace">
 	{% include_relative _includes/machines/mining/solarFurnace.html%}
 </div>
-<div class="container" id="fluidizedBed">
-	{% include_relative _includes/machines/mining/fluidizedBed.html%}
+<div class="container" id="solarReactor">
+	{% include_relative _includes/machines/mining/solarReactor.html%}
 </div>
-<div class="container" id="carbothermal">
-	{% include_relative _includes/machines/mining/carbothermal.html%}
 </div>
 <div class="container" id="moltenElectrolysis">
 	{% include_relative _includes/machines/mining/moltenElectrolysis.html%}
