final mining content, rss post

--- a/_includes/machines/mining/dustRoaster.html
+++ b/_includes/machines/mining/dustRoaster.html
@@ -1,7 +1,7 @@
 <section>
   <div class="outerDiv" >
     <div class="innerDiv">
-      <h3>Schubert Dust Roaster</h3>
+      <h3>Deflected Plasmas - Schubert Dust Roaster</h3>
       <p>This apparatus needs much more development than molten regolith electrolysis to attain a working prototype. It is solidly founded on a set of methods that have each been applied successfully for purposes similar to the part they play in it, but they have never been used together, and certainly not to do something so challenging. It's novel enough that probably a large set of prototypes would need to be built and tested in order to design a good working model. Because local gravity and ambient pressure have a big effect on testing this device, it's the sort of thing that might only see development once we have the facilities on the Moon to do that.
      </p>
      <p>This device produces a range of pure metals, pure oxygen, and slag that makes good refractory materials. It is superior to MRE in certain respects. The metals it produces collect separately as pure elements, not as a molten puddle of mixed metals. It doesn't require rare, expensive iridium. It's unlikely to be nearly as energy efficient, though. The system is also more complex and would seem to require more maintenance, at the least to remove deposits that build up on the walls. If it performs better in durability and reliability, it could be the better option if energy is plentiful enough that the lower efficiency is not a concern. When considering efficiency, the energy needed to turn the metal alloy produced in the MRE units into pure metals or useful alloys would have to be included, which could make the two systems a lot more comparable in total energy consumption for a given product.
