--- a/_includes/machines/power/SpaceSolar.html
+++ b/_includes/machines/power/SpaceSolar.html
@@ -1,4 +1,4 @@
-<div class="container" id="spaceSolar">
+<div class="container" id="SpaceSolar">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -7,7 +7,7 @@
 				</p>
 				<p>The energy they collect is passed to microwave transmitters and beamed to the surface. This is one of many instances where it is advantageous that skyhook anchor masses should be as heavy as possible. The wiring from the solar cells to the transmitters can be as thick as required to carry the current, and there is no need to think about the mass of radiators, or heat sinks, or trusses. Aluminium makes good electrical wire. It takes a lot of energy to purify the metal out of lunar regolith, but that would be an early priority for that reason. The heavy things needed for these installations can come from the Moon even at an early stage of colonization - trusses, radiators, heat sinks, wiring, transformers, waveguides, and transmitters. The transmitting antennas are parabolic dishes made of wire mesh. Fabricating them at the colonies and on the skyhooks allows very large ones to be installed - no need to fit them in a rocket fairing. The larger a transmitting antenna is, the smaller a receiving antenna (rectenna) can be. Putting a bunch of large ones on the skyhook anchor allows small ones to be on the surface. (This is also helpful for the skyhook climbers, which get their power this way.)
         </p>
-				<p>Modern solar cells for space applications now generate around 300 W per kilogram of the system. Roughly 50% of the generated energy makes it to the electrical grid after the whole process of beaming it. The payload mass from Earth needed to supply lunar installations with power is easily accommodated in the payload budget the colonies have. 
+				<p>Modern solar cells for space applications now generate around 300 W per kilogram of the system. Roughly 50% of the generated energy makes it to the electrical grid after the whole process of beaming it. The payload mass from Earth needed to supply lunar installations with power is easily accommodated in the payload budget the colonies have.
 				</p>
       </div>
     </div>
