--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -62,12 +62,19 @@
 						<ul>
 							<li><a href="machines2.html#TESS">Solar Thermal</a></li>
 							<li><a href="machines2.html#nuclearReactors">Nuclear Reactors</a></li>
+							<li><a href="machines2.html#SolarPV">Solar Photovoltaic</a></li>
+							<li><a href="machines2.html#SpaceSolar">Beamed Solar</a></li>
+							<li><a href="machines2.html#flywheels">Flywheels</a></li>
 						</ul>
 					</li>
 					<li><a href="machines2.html#mining">Mining</a>
 						<ul>
 							<li><a href="machines2.html#Minerals">Minerals</a></li>
-							<li><a href="machines2.html#Refining">Refining</a></li>
+							<li><a href="machines2.html#solarFurnace">Solar Furnace</a></li>
+							<li><a href="machines2.html#solarReactor">Solar Reactor</a></li>
+							<li><a href="machines2.html#moltenElectrolysis">Molten Regolith Electrolysis</a></li>
+							<li><a href="machines2.html#dustRoaster">Deflected Plasmas</a></li>
+							<li><a href="machines2.html#Glass">Glass Production</a></li>
 							<li><a href="machines2.html#Excavation">Excavation</a></li>
 						</ul>
 					</li>
